# Rustizarr

./: .gitignore  Dockerfile.dev  docker-compose.yml
backend/: Cargo.toml
backend/.cargo/: config.toml
backend/src/: cli.rs  image_ops.rs  main.rs  plex.rs  processor.rs  tmdb.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
