[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Serveur Web & Async
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }

# HTTP Client & JSON
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Traitement d'image
image = "0.24" 
imageproc = "0.23.0"
rusttype = "0.9.3"

# Utilitaires
dotenv = "0.15"
anyhow = "1.0"
